# cs336_study

./: .gitignore  pyproject.toml
assignment1-basics/: .gitignore  pyproject.toml
assignment1-basics/data/: TinyStoriesV2-GPT4-train.txt  TinyStoriesV2-GPT4-valid.txt
assignment1-basics/experiments/: config.json  inferter.py  plot_metrics.py  tokenize_dataset.py  train_bpe.py  train_lm.py
assignment1-basics/tests/: adapters.py  conftest.py  test_tokenizer.py  test_train_bpe.py
assignment2-systems/: pyproject.toml
cs336_basics/: __init__.py  data.py  inference.py  model.py  nn_utils.py  optimizer.py  tokenizer.py
experiments/: benchmark.py  config.json  inference.py  plot_metrics.py  tokenize_dataset.py  train_bpe.py  train_lm.py
runs/run_max/: metrics.jsonl
